Add bottom borders to each card

--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,7 @@ h1, h2, p {
 }
 
 @media only screen and (min-width: 60em) {
-  html {
-    font-size: 120%;
-    line-height: 1.5;
-  }
-
-  h1,
-  p {
-    margin: 0 0 1.5rem;
+  .i-1, .i-2 {
+    border-right: 3px solid #fff;
   }
 }
